<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >


    <Space
        android:layout_width="match_parent"
        android:layout_height="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:orientation="horizontal">


        <Space
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="317dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developed_info"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/wasim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wasim"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:text="@string/developed_name"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/email"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="15dp"
                android:text="@string/e_mail" />



            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="100" />

        <ImageView
            android:id="@+id/AppImage"
            android:layout_width="178dp"
            android:layout_height="166dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="TODO" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="100" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:orientation="horizontal">




        <Space
            android:layout_width="25dp"
            android:layout_height="101dp"
            android:layout_weight="100" />

        <TextView
            android:id="@+id/text_info"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/story" />

        <Space
            android:layout_width="20dp"
            android:layout_height="93dp"
            android:layout_weight="100" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/text_msg"
            android:layout_width="190dp"
            android:layout_height="76dp"
            android:text="@string/auto_msg"
            android:textColor="@android:color/holo_red_dark" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/Enter"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginBottom="60dp"
            android:text="@string/Enter" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
