<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Spinner
        android:id="@+id/moviespinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <RelativeLayout
        android:id="@+id/directorcontainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moviespinner">

        <TextView
            android:id="@+id/directorHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/director"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"/>


        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/directorHeading"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/yearcontainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/directorcontainer"
        android:layout_toRightOf="@+id/directorcontainer"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@+id/directorcontainer"
        android:layout_marginStart="20dp">

        <TextView
            android:id="@+id/yearHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/year"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"/>


        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/yearHeading"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/genrecontainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/directorcontainer"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/yearcontainer"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/yearcontainer">

        <TextView
            android:id="@+id/genreHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/genre"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall" />


        <TextView
            android:id="@+id/genretext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/genreHeading"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/genrecontainer"
        android:layout_width="match_parent"
        android:layout_height="661dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:contentDescription="@string/thumb"
            app:srcCompat="@drawable/ic_launcher_background" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="98dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/trailer" />

            <Space
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/star"
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        app:srcCompat="@android:drawable/btn_star_big_on" />

                    <TextView
                        android:id="@+id/rateText"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/rate10"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:text="@string/_10" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="13dp" />

            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:gravity="center"
                android:text="@string/storyname"

                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <TextView
            android:id="@+id/movieDetails"
            android:layout_width="match_parent"
            android:layout_height="89dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#000000" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/Awards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/Awards"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <TextView
            android:id="@+id/Awards_text"
            android:layout_width="match_parent"

            android:layout_height="90dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="184dp" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/search_image"
        style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
        android:layout_width="25dp"
        android:layout_height="22dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-6dp"
        android:layout_marginRight="-6dp"
        android:layout_toStartOf="@+id/Search"
        android:layout_toLeftOf="@+id/Search"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <Button
        android:id="@+id/Search"
        style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/search" />

    <EditText
        android:id="@+id/search_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:inputType="text" />



</RelativeLayout>